--- a/kairos/scheduling/templates/1-2-3-see_schedules.html
+++ b/kairos/scheduling/templates/1-2-3-see_schedules.html
@@ -31,7 +31,7 @@
 
 {% block content %}
     <!-- section to select the cvs -->
-    <form style="margin: 5em 2em;" action="" method="post">
+    <form style="margin: 5em 2em;" action="{% url 'see_schedules' %}" method="post">
         {%csrf_token%}
         <h2>Selección de horario</h2>
         <div class="form-floating">
