--- a/kairos/scheduling/templates/1-2-asign_turns.html
+++ b/kairos/scheduling/templates/1-2-asign_turns.html
@@ -78,7 +78,7 @@
                     <label for="quantity">Cantidad llantas</label>
                 </div>                   
                 <div>
-                    <input class="form-check-input" type="checkbox" name="rotation" value="on" id="rotation" onclick="DoCheckUncheckDisplay(this,'quantityRotate','label-quantityRotate')">
+                    <input class="form-check-input" type="checkbox" name="rotation" value="on" id="rotation" onclick="hideShow(this,'quantityRotate','label-quantityRotate')">
                     <label class="form-check-label" for="rotation">Rotación</label>
                 </div>
                 <div class="form-floating" >
