--- a/kairos/scheduling/templates/1-modify_schedules.html
+++ b/kairos/scheduling/templates/1-modify_schedules.html
@@ -46,7 +46,9 @@
                     <input class="form-control" type="date" name="date" id="date" value="{{date}}" max="{{maxDate}}" required>
                     <label for="date">Fecha</label>
                 </div>
-                <button type="submit" class="btn btn-secondary btn-outline-light ">Ver</button>
+                <div style="display: flex;justify-content: end;">
+                    <button type="submit" class="btn btn-secondary btn-outline-light ">Ver</button>
+                </div>
             </form>
             {% if date %} 
             <hr>
