--- a/kairos/scheduling/templates/0-previewExcel.html
+++ b/kairos/scheduling/templates/0-previewExcel.html
@@ -38,51 +38,45 @@
 </head>
 
 <body>
-<table class="table-fill">
-<thead>
-<tr>
-<th class="text-left">Fecha del servicio</th>
-<th class="text-left">Hora del servicio</th>
-<th class="text-left">CVS</th>
-<th class="text-left">Número de factura</th>
-<th class="text-left">Cédula del cliente</th>
-<th class="text-left">Nombre del cliente</th>
-<th class="text-left">Teléfono del cliente</th>
-<th class="text-left">Servicio prestado</th>
-<th class="text-left">Comentarios del servicio</th>
-<th class="text-left">Tipo de llanta</th>
-<th class="text-left">Cantidad de llantas</th>
-<th class="text-left">¿Hubo rotación?</th>
-<th class="text-left">Cantidad de llantas rotadas</th>
-<th class="text-left">Duración del servicio</th>
-<th class="text-left">Agendado por</th>
-<th class="text-left">Fecha agendamiento</th>
-<th class="text-left">Modificado por</th>
-<th class="text-left">Fecha de modificación</th>
-</tr>
-</thead>
-<tbody class="table-hover">
-<tr>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
-<tr>
-<td class="text-left">February</td>
-<td class="text-left">$ 10,000.00</td>
-</tr>
-<tr>
-<td class="text-left">March</td>
-<td class="text-left">$ 85,000.00</td>
-</tr>
-<tr>
-<td class="text-left">April</td>
-<td class="text-left">$ 56,000.00</td>
-</tr>
-<tr>
-<td class="text-left">May</td>
-<td class="text-left">$ 98,000.00</td>
-</tr>
-</tbody>
-</table>    
+    <div class="container-fluid">
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Fecha del servicio</th>
+                    <th scope="col">Hora del servicio</th>
+                    <th scope="col">CVS</th>
+                    <th scope="col">Número de factura</th>
+                    <th scope="col">Cédula del cliente</th>
+                    <th scope="col">Nombre del cliente</th>
+                    <th scope="col">Télefono del cliente</th>
+                    <th scope="col">Servicio prestado</th>
+                    <th scope="col">Comentarios del servicio</th>
+                    <th scope="col">Tipo de llanta</th>
+                    <th scope="col">Cantidad de llantas</th>
+                    <th scope="col">¿Hubo rotación?</th>
+                    <th scope="col">Cantidad de llantas rotadas</th>
+                    <th scope="col">Duración del servicio</th>
+                    <th scope="col">Agendado por</th>
+                    <th scope="col">Fecha agendamiento</th>
+                    <th scope="col">Modificado por</th>
+                    <th scope="col">Fecha de modificación</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>chao</td>
+                    <td>bueno</td>
+                    <td>hola</td>
+                </tr>
+
+                <tr>
+                    <td>bueno</td>
+                    <td>hola</td>
+                    <td>chao</td>
+                </tr>
+            </tbody>
+        </table>    
+    </div>
 </body>
 {% endblock %}
