--- a/kairos/scheduling/templates/0-reports.html
+++ b/kairos/scheduling/templates/0-reports.html
@@ -45,7 +45,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
 
 <div class="bootstrap-iso">
-    <div class="container-fluid">
+    <div class="container">
         <div class="panel panel-primary panel-dark">
             <div class="panel-heading">FILTROS</div>
             <div class="panel-body">
