--- a/kairos/scheduling/templates/base.html
+++ b/kairos/scheduling/templates/base.html
@@ -83,7 +83,7 @@
   footer {
     width: 100%;
     height: 81px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
   }
