--- a/kairos/scheduling/templates/0-reports.html
+++ b/kairos/scheduling/templates/0-reports.html
@@ -144,6 +144,17 @@
             </tbody>
         </table>    
     </div>
+    <div style="display: flex; justify-content: center;">
+        <form action="{% url 'excel' %}" method="post">
+            {%csrf_token%}
+            <!-- info to keep -->
+            <input type="hidden" name="cvsList" value="{{cvsList}}">
+            <input type="hidden" name="initialDate" value="{{initialDate}}">
+            <input type="hidden" name="finalDate" value="{{finalDate}}">
+            <button type="submit" class="btn btn-secondary btn-outline-light">Descargar</button>
+        </div>
+    </form>
+
 {% endif %}
 
 <br>
