Front de bloquear horarios listo

--- a/kairos/scheduling/templates/1-2-asign_turns.html
+++ b/kairos/scheduling/templates/1-2-asign_turns.html
@@ -53,7 +53,10 @@
                     </select>
                     <label for="sc-select">Visualizando horario de:</label>
                 </div>
-                <button type="submit" class="btn btn-secondary btn-outline-light ">Ver</button>
+                <div style="display: flex;justify-content: end;">
+                    <button type="submit" class="btn btn-secondary btn-outline-light ">Ver</button>
+                </div>
+                
             </form>
             {% if cvsName %} 
             <hr>
