--- a/kairos/scheduling/templates/1-2-time_turns.html
+++ b/kairos/scheduling/templates/1-2-time_turns.html
@@ -58,7 +58,9 @@
                     </select>
                     <label for="cvsName">Visualizando horario de:</label>
                 </div>
-                <button type="submit" class="btn btn-secondary btn-outline-light ">Cambiar</button>
+                <div style="display: flex;justify-content: end;">
+                    <button type="submit" class="btn btn-secondary btn-outline-light ">Cambiar</button>
+                </div>
             </form>
             <hr>
             <div class="card" style="margin: 0 2em;">
