Añadida la idea del bloqueo

--- a/kairos/scheduling/templates/0-1-block_schedule.html
+++ b/kairos/scheduling/templates/0-1-block_schedule.html
@@ -93,6 +93,7 @@
                                     <label for="hour">Hora final</label>
                                 </div>
                             </div>
+                            <input type="hidden" name="cvsName" value="{{cvsName}}">
                         </div>
                         <!-- start confirm modal -->
                         <!-- Button trigger modal -->
